<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in_to_continue" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvWelcome"
            android:text="@string/your_email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvEmail"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etEmail"
            android:text="@string/your_password"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvPassword"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btSignUp"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sign_up" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:textSize="14sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            facebook:com_facebook_login_text="@string/fb_login_text"
            facebook:com_facebook_logout_text="@string/fb_logout_text"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_button" />
    </RelativeLayout>

</FrameLayout>