<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AccountActivity">

    <ImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivUserAvatar"
        android:layout_toEndOf="@+id/ivUserAvatar"
        android:text="@string/your_name" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_toEndOf="@+id/ivUserAvatar"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_toEndOf="@+id/ivUserAvatar"
        android:text="@string/your_phone" />

    <EditText
        android:id="@+id/etUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etUserName"
        android:layout_below="@+id/tvUserPhone"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tvUserState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/ivUserAvatar"
        android:layout_below="@+id/ivUserAvatar"
        android:text="@string/state" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_alignStart="@+id/ivUserAvatar"
        android:layout_below="@+id/tvUserState" />

    <TextView
        android:id="@+id/tvUserDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvUserState"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/spinnerState"
        android:text="@string/district"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinnerDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvUserDistrict"
        android:layout_alignTop="@+id/spinnerState"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvUserDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/ivUserAvatar"
        android:layout_below="@+id/spinnerDistrict"
        android:text="@string/userDescription" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:layout_marginEnd="10dp"
        android:layout_alignStart="@+id/ivUserAvatar"
        android:layout_below="@+id/tvUserDescription"
        android:ems="10"/>

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/update" />

</RelativeLayout>